# claimOS

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Makefile  README.md  docker-compose.yml
backend/: .env.example  fix_migration.py  pyproject.toml  seed_operator.py
backend/app/: main.py
backend/app/agents/: base.py  claim_bridge.py  communication.py  consensus.py  context.py  events.py  graph.py  history.py  manager.py  memory.py  monitor.py  planner.py  registry.py  scheduler.py
backend/app/api/: router.py
backend/app/collaboration/: activity.py  analytics.py  calendar.py  comments.py  conflicts.py  presence.py  websockets.py  whiteboard.py
backend/app/command_center/: awareness.py  decision_room.py  kpi.py  recommendation.py  reporting.py  scenario.py
backend/app/config/: constants.py  settings.py
backend/app/core/: database.py  logging.py  security.py  settings.py
backend/app/devops/: backup.py  changes.py  chaos.py  dependencies.py  deployment.py  environments.py  incidents.py  migrations.py  production.py  releases.py  runbooks.py  security.py
backend/app/engines/: base.py
backend/app/federation/: governance.py  knowledge.py  manager.py  memory.py  mesh.py  observability.py  orchestrator.py  recovery.py  scheduler.py
backend/app/governance/: models.py
backend/app/graph/: entity_resolver.py  fraud_network.py  neo4j_repository.py
backend/app/investigation/: comparison.py  copilot.py  dashboard.py  decision.py  graph.py  navigator.py  recommendation.py  search.py  workspace.py
backend/app/knowledge/: chunking.py  citation.py  context_compression.py  embeddings.py  evidence_ranking.py  hybrid_rag.py  hybrid_search.py  indexer.py  keyword_index.py  knowledge_graph.py  manager.py  models.py  reranker.py  summarizer.py  vector_store.py
backend/app/learning/: dataset_builder.py  dataset_versioning.py  drift.py  export.py  feedback_collector.py  manager.py  metrics.py  models.py  quality.py  sampling.py
backend/app/llm/: base.py  cache.py  evaluation.py  exceptions.py  guardrails.py  manager.py  memory.py  models.py  prompts_registry.py  registry.py  retry.py  telemetry.py  templates.py
backend/app/mcp/: capabilities.py  prompts.py  registry.py  resources.py  security.py  sessions.py  tools.py  transport.py
backend/app/model_registry/: approval.py  compliance.py  dataset_governance.py  evaluation.py  explainability.py  lifecycle.py  monitoring.py  prompt_governance.py  registry.py  responsible.py  risk.py  scorecard.py
backend/app/models/: __init__.py  audit.py  base.py  claim.py  document.py  knowledge.py  lookups.py  medical.py  operator.py  party.py  police_report.py  policy.py  provenance.py  validation.py  vehicle.py
backend/app/observability/: aiops.py  alerts.py  collectors.py  costs.py  decorators.py  exporters.py  health.py  logging.py  metrics.py  models.py  profiler.py  slo.py  timeline.py  tracing.py
backend/app/ollama/: client.py  gpu_manager.py  memory.py  prompt_runtime.py  (+1 more)
backend/migrations/: env.py
backend/scripts/: seed_db.py  test_pipeline_e2e.py
backend/tests/: conftest.py  test_pipeline.py
(+498 files in other folders)
