[project]
name = "backend"
version = "0.1.0"
description = "claimOS — AI-powered Intelligent Claims Processing Platform"
authors = [
    { name = "zaki" }
]
requires-python = ">=3.13,<4.0"
dependencies = [
    "fastapi>=0.115.6",
    "uvicorn>=0.34.0",
    "sqlalchemy>=2.0.36",
    "psycopg[binary]>=3.2.3",
    "pydantic-settings>=2.7.0",
    "alembic>=1.14.0",
    "python-multipart>=0.0.20",
    "opencv-python-headless>=4.10.0.84",
    "numpy>=2.2.0",
    "scikit-image>=0.25.0",
    "shapely>=2.0.0",
    "pytesseract>=0.3.13",
    "networkx>=3.0",
    "psycopg2-binary (>=2.9.12,<3.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "aiosqlite (>=0.22.1,<0.23.0)",
    "greenlet (>=3.5.3,<4.0.0)",
    "pgvector (>=0.5.0,<0.6.0)",
    "neo4j (>=6.2.0,<7.0.0)",
    "python-jose[cryptography] (>=3.5.0,<4.0.0)",
    "passlib[bcrypt] (>=1.7.4,<2.0.0)",
    "pyotp (>=2.10.0,<3.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "sse-starlette (>=3.4.5,<4.0.0)",
    "prometheus-client (>=0.25.0,<0.26.0)",
    "opentelemetry-api (>=1.43.0,<2.0.0)",
    "opentelemetry-sdk (>=1.43.0,<2.0.0)",
    "pymupdf (>=1.28.0,<2.0.0)",
    "clamd (>=1.0.2,<2.0.0)",
    "python-doctr[torch] (>=1.0.1,<2.0.0)",
    "paddleocr (>=3.7.0,<4.0.0)",
    "paddlepaddle (>=3.3.1,<4.0.0)",
    "langgraph (>=1.2.6,<2.0.0)"
]

[project.optional-dependencies]
dev = [
    "pytest (>=8.0.0)",
    "pytest-cov (>=6.0.0)",
    "httpx (>=0.28.0)",
    "ruff (>=0.11.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[dependency-groups]
dev = [
    "pytest-asyncio (>=1.4.0,<2.0.0)"
]
